--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    compile files('libs/sqlite-jdbc-3.8.9.1.jar')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
