--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.12'
+    //implementation 'junit:junit:4.12'
     compile files('libs/sqlite-jdbc-3.8.9.1.jar')
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    //testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
