--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,5 @@ repositories {
 dependencies {
     implementation 'junit:junit:4.12'
     compile files('libs/sqlite-jdbc-3.8.9.1.jar')
-    //testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
