--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,19 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes "Main-Class": "flashcards.Main"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect {it.isDirectory() ? it : zipTree(it)}
+    }
+
+    destinationDirectory = file("$rootDir/jar-file")
+    archivesBaseName = 'app'
+}
+
 dependencies {
     implementation 'junit:junit:4.12'
     compile files('libs/sqlite-jdbc-3.8.9.1.jar')
